# Barrett_hand_sim

./: Test.bullet  barrett_hand.urdf  barrett_hand_target.urdf  cal_dist_sdf.py  collision_check_sdf.py  main_code.py  main_test.py  object.urdf  point_loc_test.py  sdfield_generator.py  simulated_annealing_test.py  sys_state.py  test_load_urdf.py
BarrettHand-280.SLDASM/: CMakeLists.txt  package.xml
BarrettHand-280.SLDASM/config/: joint_names_BarrettHand-280.SLDASM.yaml
BarrettHand-280.SLDASM/launch/: display.launch  gazebo.launch
BarrettHand-280.SLDASM/meshes/: base_link.STL  finger_1_dist_link.STL  finger_1_med_liink.STL  finger_1_prox_link.STL  finger_2_dist_link.STL  finger_2_med_link.STL  finger_2_prox_link.STL  finger_3_dist_link.STL  finger_3_med_link.STL
BarrettHand-280.SLDASM/urdf/: BarrettHand-280.SLDASM.csv  BarrettHand-280.SLDASM.urdf
demo_sdf_files/: object.pickle
result_state/: saved.bullet
urdf_model/: contact point.mtl
